--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,11 @@
 .header {
     background-color: #ffffff;
     border-bottom: 1px solid #e7e9fc;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+}
+.header-container {
+display: flex;
+align-items: center;
+justify-content: space-between;
 }
 
 .menu {
@@ -13,7 +15,6 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
 }
 
 .logo {
@@ -33,7 +34,7 @@
 .header-nav {
     display: flex;
     gap: 40px;
-    padding: 0px;
+    padding: 0;
     align-items: center;
     margin-left: 76px;
     font-weight: 500;
@@ -41,7 +42,6 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-
 }
 
 .menu a:hover,
@@ -53,7 +53,7 @@
 
 .contacts {
     display: flex;
-    padding: 0px;
+    padding: 0;
     gap: 8px;
     align-items: center;
     font-style: normal;
@@ -68,6 +68,7 @@
     color: #434455;
     display: flex;
     gap: 40px;
+
 }
 
 .contacts:hover,
